# polo

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  README.md  readthedocs.yml
api/: CMakeLists.txt
api/include/: polo_api.h  polo_aux.hpp
api/src/: polo_adadelta_cr.cpp  polo_adadelta_psm.cpp  polo_adadelta_pss.cpp  polo_adadelta_psw.cpp  polo_adagrad_psw.cpp  polo_adam_cr.cpp  polo_adam_pss.cpp  polo_adam_psw.cpp  polo_gradient_cr.cpp  polo_gradient_psm.cpp  polo_gradient_pss.cpp  polo_gradient_s.cpp  polo_momentum_psm.cpp  polo_momentum_pss.cpp  polo_momentum_s.cpp  polo_nadam_cr.cpp  polo_nadam_psm.cpp  polo_nadam_pss.cpp  polo_nadam_psw.cpp  polo_nesterov_cr.cpp  polo_proxgrad_cr.cpp  polo_proxgrad_pss.cpp  polo_proxgrad_psw.cpp  polo_proxgrad_s.cpp
c-api/: CMakeLists.txt
c-api/include/: common.hpp  polo_api.h  ps_api.h
c-api/src/: api.cpp  custom-api.cpp  paramserver_m.cpp  paramserver_s.cpp  paramserver_w.cpp  polo_adadelta_cr.cpp  polo_adadelta_psm.cpp  polo_adadelta_pss.cpp  polo_adadelta_psw.cpp  polo_adadelta_s.cpp  polo_adagrad_cr.cpp  polo_adagrad_psm.cpp  polo_adagrad_pss.cpp  polo_adagrad_psw.cpp  polo_adagrad_s.cpp  polo_adam_cr.cpp  polo_adam_psm.cpp  polo_adam_pss.cpp  polo_adam_psw.cpp  polo_adam_s.cpp  polo_gradient_cr.cpp  polo_gradient_psm.cpp  polo_gradient_pss.cpp  polo_gradient_psw.cpp  polo_gradient_s.cpp  polo_momentum_cr.cpp  polo_momentum_psm.cpp  polo_momentum_pss.cpp  polo_momentum_psw.cpp  polo_momentum_s.cpp  polo_nadam_cr.cpp  polo_nadam_psm.cpp  polo_nadam_pss.cpp  polo_nadam_psw.cpp  polo_nadam_s.cpp  polo_nesterov_cr.cpp  polo_nesterov_psm.cpp  polo_nesterov_pss.cpp  polo_nesterov_psw.cpp  polo_nesterov_s.cpp  (+6 more)
cmake/: cpack-linux.cmake  ctest-clang.cmake  ctest-gcc.cmake
docs/: CMakeLists.txt  Makefile  advanced.rst  algorithms.rst  api.rst  c-api.rst  conf.py  distributed-memory.rst  examples.rst  getting-started.rst  index.rst  installation.rst  julia.rst  policies.rst  projection.rst  proxgradient.rst  requirements.txt  serial.rst  shared-memory.rst  smoothing.rst  step.rst  utilities.rst
docs/algorithm/: proxgradient.rst  singlestage.rst
docs/algorithms/: proxgradient.rst
docs/boosting/: incremental.rst
docs/descent/: momentum.rst  nesterov.rst
docs/distributed-memory/: communication.rst  parameter-server.rst  piag.rst  setup.rst
docs/examples/: CMakeLists.txt  gradient.rst
docs/examples/getting-started/: CMakeLists.txt  anatomy.cpp  logger.cpp  logger.py  loss.cpp  svmdata.cpp  terminator.cpp  terminator.py
docs/examples/serial/: CMakeLists.txt  logistic-l1-l2.cpp  logistic-l1-l2.py  logistic-l1.cpp  logistic-l1.py  logistic.cpp  logistic.py
docs/execution/: multithread.rst  paramserver.rst  serial.rst
docs/getting-started/: anatomy.rst  compilation.rst  data.rst  logging.rst  loss.rst  setting-up.rst  setup.rst  terminator.rst
docs/gradient/: incremental.rst  momentum.rst
docs/policies/: proxgradient.rst
docs/projection/: none.rst
docs/prox/: prox.rst  set.rst
docs/proxgradient/: boosting.rst  execution.rst  prox.rst  smoothing.rst  step.rst
docs/serial/: leastsquares.rst  logistic.rst  policies.rst  proxgradient.rst
docs/shared-memory/: shared-data.rst
docs/smoothing/: adadelta.rst  adagrad.rst  none.rst  rmsprop.rst
docs/step/: constant.rst  decreasing.rst
docs/utilities/: data.rst  encoder.rst  logger.rst  logging.rst  loss.rst  matrix.rst  sampler.rst  terminator.rst
docs/utility/: problem.rst  sampler.rst  terminator.rst
examples/: gradient.cpp
include/: pbopt.hpp
include/pbopt/: execution.hpp  problem.hpp  sampler.hpp  smoothing.hpp  utility.hpp
include/polo/: algorithm.hpp  boosting.hpp  (+11 more)
pbopt/: algorithm.hpp  execution.hpp  pbopt.hpp  projection.hpp  utility.hpp
src/: CMakeLists.txt  algorithm.cpp  descent.cpp  execution.cpp  gradient.cpp  gradient.hpp  polo-config.cmake  polo-config.cmake.in  problem.cpp  projection.cpp  projection.hpp  smoothing.cpp  step.cpp  step.hpp  utility.cpp  utility.hpp
src/algorithm/: singlestage.cpp  singlestage.hpp
src/descent/: momentum.cpp  nesterov.cpp
src/execution/: serial.cpp  serial.hpp
src/gradient/: momentum.cpp  momentum.hpp  nesterov.cpp
src/include/polo/: algorithm.hpp  boosting.hpp  encoder.hpp  execution.hpp  loss.hpp  polo.hpp  prox.hpp  smoothing.hpp  terminator.hpp  utility.hpp
src/include/polo/algorithm/: aliases.hpp  proxgradient.hpp
src/include/polo/boosting/: aggregated.hpp  custom.hpp  none.hpp
src/include/polo/communicator/: address.hpp
src/include/polo/encoder/: dynamic.hpp  identity.hpp  random_quantizer.hpp  random_sparsifier.hpp  ternary.hpp  topk.hpp
src/include/polo/execution/: multithread.hpp  paramserver.hpp  serial.hpp
src/include/polo/loss/: aloss.hpp  data.hpp  leastsquares.hpp  logistic.hpp
src/include/polo/matrix/: amatrix.hpp  dmatrix.hpp
src/include/polo/problem/: qp.hpp
src/include/polo/prox/: custom.hpp  l1norm.hpp  l2ball.hpp  none.hpp
src/include/polo/smoothing/: adadelta.hpp  amsgrad.hpp  custom.hpp  none.hpp  rmsprop.hpp
src/include/polo/step/: custom.hpp  decreasing.hpp
src/include/polo/terminator/: decision.hpp  gradient.hpp  iteration.hpp  value.hpp
src/include/polo/utility/: atomic.hpp  blas.hpp  custom_termination.hpp  logger.hpp  maxiter.hpp  null.hpp  sampler.hpp
src/problem/: diagqp.cpp  qp.cpp
src/projection/: affine.hpp  box.cpp  box.hpp  hspace.hpp  l2ball.cpp  l2ball.hpp  none.cpp  orthant.cpp
src/smoothing/: adadelta.cpp  adadelta.hpp  adagrad.cpp  none.cpp  none.hpp  rmsprop.cpp
src/step/: constant.cpp  decreasing.cpp  decreasing.hpp
src/utility/: blas.cpp  blas.hpp  maxiter.cpp
test/: diagqp.cpp
tests/: CMakeLists.txt
tests/boosting/: CMakeLists.txt  aggregated.cpp  none.cpp
tests/encoder/: CMakeLists.txt  dynamic.cpp  identity.cpp  random_quantizer.cpp  random_sparsifier.cpp  ternary.cpp  topk.cpp
tests/loss/: CMakeLists.txt  leastsquares.cpp  logistic.cpp
tests/step/: CMakeLists.txt  constant.cpp  decreasing.cpp
tests/utility/: CMakeLists.txt  sampler_custom.cpp  sampler_uniform.cpp
(+93 files in other folders)
